@@ -35,26 +35,32 @@ jobs:
     - name: setup_miniconda
       uses: conda-incubator/setup-miniconda@v2
       with:
-        python-version: 3.9
-        auto-update-conda: true
-        channel-priority: flexible
+        python-version: "3.10"
+        miniforge-variant: Mambaforge
+        miniforge-version: latest
+        channel-priority: strict
         channels: conda-forge, bioconda
-        mamba-version: "*"
         add-pip-as-python-dependency: true
         architecture: x64
 
-    - name: install_dev_versions
-      run: |
-        pip install -i https://pypi.anaconda.org/scipy-wheels-nightly/simple numpy
-        pip install -i https://pypi.anaconda.org/scipy-wheels-nightly/simple scipy
-
-    - name: install_other_deps
+    - name: install_deps
       uses: ./.github/actions/setup-deps
       with:
         mamba: true
-        numpy: ""
-        scipy: ""
+        full-deps: true
 
+      # overwrite installs by picking up nightly wheels
+    - name: nightly_wheels
+      run: |
+        pip install --pre -U -i https://pypi.anaconda.org/scipy-wheels-nightly/simple scipy numpy h5py matplotlib
+
+
+    - name: list_deps
+      run: |
+        mamba list
+        pip list
+
+      # Intentionally going with setup.py builds so we can build with latest
     - name: build_srcs
       uses: ./.github/actions/build-src
       with:
@@ -64,7 +70,7 @@ jobs:
 
     - name: run_tests
       run: |
-        pytest -n $numprocs testsuite/MDAnalysisTests --disable-pytest-warnings --durations=50
+        pytest -n $numprocs testsuite/MDAnalysisTests --durations=50 -W error::FutureWarning
 
 
   # Issue #3442
